Small fix to HTML

--- a/client/index.html
+++ b/client/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Cow List</title>
+  <title>Related Items Component</title>
 </head>
 <body>
   <div id="app"></div>
