--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,7 @@
   <title>Related Items Component</title>
 </head>
 <body>
-  <div id="app"></div>
+  <div id="RelatedProductsService"></div>
   <script src="bundle.js"></script>
 </body>
 </html>
